--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>home</title>
@@ -7,6 +7,7 @@
 <body>
 
 <h1>home budget</h1>
+<p><a th:href="@{/category/all}">All Categories</a></p>
 
 </body>
 </html>
